[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprite/mc_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scene/entities/Extras/HPBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/entities/Extras/AmmoBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/items/guns/Pistol.tscn" type="PackedScene" id=4]
[ext_resource path="res://script/Entity.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 8.11679

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "walking",
"speed": 2.0
} ]

[node name="Entity" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0 )
scale = Vector2( 1.61016, 1.71273 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 4 )
animation = "walking"

[node name="FiringTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 6

[node name="HPBar" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -33 )

[node name="AmmoBar" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -28 )

[node name="WeaponHandler" type="Node2D" parent="."]
position = Vector2( 11, 4 )

[node name="Pistol" parent="WeaponHandler" instance=ExtResource( 4 )]
